2005-07-24  Leonard den Ottolander <leonard den ottolander nl>

	* wtools.h: #include "widget.h" and remove redundant declarations
	of Dlg_head and WListbox;

2005-07-23  Roland Illig  <roland.illig@gmx.de>

	* util.c (save_file_position): Only save the position if not
	at the beginning of the file (1;0).
	* view.c: When saving and loading the file position, use the
	full pathname instead of the one passed as argument.

2005-07-22  Roland Illig  <roland.illig@gmx.de>

	* charsets.c: Fixed wrong comparison of the result of iconv().

2005-07-22  Roland Illig  <roland.illig@gmx.de>

	* utilunix.c: Replaced the use of getgrouplist() with
	getgroups(), which is more appropriate and does not contain a
	buffer overflow in most recent glibc versions (upto 2.3.2).
	Simplified the code. Removed init_groups() and destroy_groups().
	They are unnecessary.
	* main.c: init_groups() and destroy_groups() have disappeared,
	so don't call them.

2005-07-22  Roland Illig  <roland.illig@gmx.de>

	* ext.c: Fixed a typo which has been noted by Arpad Biro.
	* help.c: Fixed an invalid memory access, which has been noted
	by Vitja Makarov. And fixed a bug that had been introduced by
	me, when replacing Dlg_head * with void *.
	* help.c: Fixed shadowing warnings from gcc.

2005-07-20  Roland Illig  <roland.illig@gmx.de>

	* key.c: When the command line option -x is given, enable
	additional key sequences that are typical for xterms.
	* main.c: First parse command line arguments, then initialize
	key sequences.

2005-07-20  Roland Illig  <roland.illig@gmx.de>

	* util.c: Added gettext_ui(), which translates a string and
	strips everything before the first '|' character. This function
	is used to translate special elements of the user interface,
	like ButtonBar labels.
	* util.h: Likewise.
	* view.c: Using the new gettext_ui() function.

2005-07-17  Roland Illig  <roland.illig@gmx.de>

	* util.c: Added ascii_alpha_to_cntrl(), which converts 'x' to